--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title> CONTACT </title>
-  <h1><a href="canuday.html">BACK TO MAIN PAGE</a><h1>
+  <h1><a href="index.html">BACK TO MAIN PAGE</a><h1>
     <style>
   h1{text-align:Center}
   body{
