--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 	</style>
 	</head>
 	<title>HOME</title>
- <h3><a href="canuday.html">BACK TO MAIN PAGE</a><h3>
+ <h3><a href="index.html">BACK TO MAIN PAGE</a><h3>
 	
 	<body>
       <br>
