--- a/product.html
+++ b/product.html
@@ -11,7 +11,7 @@
 	</style>
 	</head>
 	<title>PRODUCT</title>
- <h2><a href="canuday.html">BACK TO MAIN PAGE</a><h2>
+ <h2><a href="index.html">BACK TO MAIN PAGE</a><h2>
 	
 	<body>
 	<br>
