--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
 	</style>
 	</head>
 	<title>ABOUT US</title>
+ <h2><a href="index.html">BACK TO MAIN PAGE</a><h2>
 	<body>
 
 	<h2><font color=black>HISTORY OF THE COMPANY:</h2>
